--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <!-- card part -->
             <div class="mt-24 flex gap-7 flex-col lg:flex-row justify-between">
                 <!-- 1st card -->
-                <div class="card bg-base-100 w-96 shadow-xl">
+                <div class="card bg-base-100  shadow-xl">
                     <figure>
                         <img src="images/news-1.png" alt="" />
                     </figure>
@@ -217,7 +217,7 @@
                     </div>
                 </div>
                 <!-- 2nd card -->
-                <div class="card bg-base-100 w-96 shadow-xl">
+                <div class="card bg-base-100  shadow-xl">
                     <figure>
                         <img src="images/news-2.png" alt="" />
                     </figure>
@@ -232,7 +232,7 @@
                     </div>
                 </div>
                 <!-- 3rd card -->
-                <div class="card bg-base-100 w-96 shadow-xl">
+                <div class="card bg-base-100  shadow-xl">
                     <figure>
                         <img src="images/news-3.png" alt="" />
                     </figure>
@@ -248,10 +248,57 @@
                 </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
-
+        <footer class="mt-24 bg-base-200 lg:px-56 lg:py-32">
+            <div class="flex justify-between lg:pr-64">
+                <img src="images/cup.png" alt="">
+                <p>
+                    <span>Ready to get strated?</span>
+                    <button class="btn btn-primary">Get Started</button>
+                </p>
+            </div>
+         <div class=" footer text-base-content p-10">
+            <nav>
+                <h6 class="footer-title">Services</h6>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+              </nav>
+              <nav>
+                <h6 class="footer-title">Company</h6>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+              </nav>
+              <nav>
+                <h6 class="footer-title">Legal</h6>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+              </nav>
+              <form>
+                <h6 class="footer-title">Newsletter</h6>
+                <fieldset class="form-control w-80">
+                  <label class="label">
+                    <span class="label-text">Enter your email address</span>
+                  </label>
+                  <div class="join">
+                    <input
+                      type="text"
+                      placeholder="username@site.com"
+                      class="py-4 bg-transparent border-b-2 border-black outline-none" />
+                    <button class="btn btn-primary  rounded-full"><i class="fa-solid fa-chevron-right"></i></button>
+                  </div>
+                </fieldset>
+              </form>
+         </div>
+         <div class="text-center">
+            <aside>
+                <p>Copyright © - All right reserved by Ethar Industries Ltd</p>
+              </aside>
+         </div>
+          </footer>
 </body>
 
 </html>
