--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 <body class="font-manrop">
     <header class="container mx-auto pt-5 ">
         <div class="">
-            <div class="flex flex-col lg:flex-row gap-32 justify-center items-center">
+            <div class="flex flex-col lg:flex-row gap-32 justify-between items-center">
                 <div class="space-y-7">
                     <h1 class="text-7xl font-extrabold">It's good <br>
                         tea time at The <br> Tea House</h1>
                     <p class="py-6">
                         Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
                     </p>
-                    <button class="btn btn-primary">Explore More</button>
+                    <button class="btn  text-white bg-gradient-to-r from-[#FF8938] to-[#FF0000]">Explore More <i class="fa-solid fa-arrow-trend-up"></i> </button>
                 </div>
 
                 <div>
-                    <img src="images/banner.png" class="lg:max-w-2xl" />
+                    <img src="images/banner.png" class="" />
                     <div class="-mt-24 ml-32 flex items-center gap-5 drop-shadow-lg bg-white p-5 w-60">
                         <i class="fa-solid fa-star text-[#FFC850] text-3xl"></i>
                         <div>
@@ -147,7 +147,7 @@
                         available, but the majority have suffered alteration in some form, by injected humour, or
                         randomised
                         words which don't look even slightly believable. </p>
-                    <button class="btn btn-primary">Show All</button>
+                    <button class="btn text-gradient-to-r from-[#FF8938] to-[#FF0000]">Show All</button>
                 </div>
             </div>
             <!-- review section -->
@@ -212,7 +212,7 @@
                         <p class="text-base text-[#777777]">There are many variations of passages of Lorem Ipsum
                             available.</p>
                         <div class="card-actions">
-                            <button class="btn btn-primary">Learn More</button>
+                            <button class="btn">Learn More</button>
                         </div>
                     </div>
                 </div>
@@ -227,7 +227,7 @@
                         <p class="text-base text-[#777777]">There are many variations of passages of Lorem Ipsum
                             available.</p>
                         <div class="card-actions">
-                            <button class="btn btn-primary">Learn More</button>
+                            <button class="btn">Learn More</button>
                         </div>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                         <p class="text-base text-[#777777]">There are many variations of passages of Lorem Ipsum
                             available.</p>
                         <div class="card-actions">
-                            <button class="btn btn-primary">Learn More</button>
+                            <button class="btn">Learn More</button>
                         </div>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
                 <img src="images/cup.png" alt="">
                 <p>
                     <span>Ready to get strated?</span>
-                    <button class="btn btn-primary">Get Started</button>
+                    <button class="btn text-white bg-gradient-to-r from-[#FF8938] to-[#FF0000]">Get Started</button>
                 </p>
             </div>
          <div class=" footer text-base-content p-10">
@@ -288,7 +288,7 @@
                       type="text"
                       placeholder="username@site.com"
                       class="py-4 bg-transparent border-b-2 border-black outline-none" />
-                    <button class="btn btn-primary  rounded-full"><i class="fa-solid fa-chevron-right"></i></button>
+                    <button class="btn text-white bg-gradient-to-r from-[#FF8938] to-[#FF0000]  rounded-full"><i class="fa-solid fa-chevron-right"></i></button>
                   </div>
                 </fieldset>
               </form>
