--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="">
             <div class="flex flex-col lg:flex-row gap-32 justify-between items-center">
                 <div class="space-y-7">
-                    <h1 class="text-7xl font-extrabold">It's good <br>
+                    <h1 class="text-5xl lg:text-7xl font-extrabold">It's good <br>
                         tea time at The <br> Tea House</h1>
                     <p class="py-6">
                         Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.
